2009-05-20  Mark Ellis <mark@mpellis.org.uk>

	* Initial code, mostly functional
